--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,38 @@ cython_debug/
 #.idea/
 *.csv
 *.json
+trainset_test/trial_4/pipeline
+trainset_test/trial_4/checkpoint.index
+trainset_test/trial_4/checkpoint.data-00000-of-00001
+trainset_test/trial_4/checkpoint
+trainset_test/trial_3/pipeline
+trainset_test/trial_3/checkpoint.index
+trainset_test/trial_3/checkpoint.data-00000-of-00001
+trainset_test/trial_3/checkpoint
+trainset_test/trial_2/pipeline
+trainset_test/trial_2/checkpoint.index
+trainset_test/trial_2/checkpoint.data-00000-of-00001
+trainset_test/trial_2/checkpoint
+trainset_test/trial_1/pipeline
+trainset_test/trial_1/checkpoint.index
+trainset_test/trial_1/checkpoint.data-00000-of-00001
+trainset_test/trial_1/checkpoint
+trainset_test/trial_0/pipeline
+trainset_test/trial_0/checkpoint.index
+trainset_test/trial_0/checkpoint.data-00000-of-00001
+trainset_test/trial_0/checkpoint
+trainset_test/graph
+trainset_test/best_pipeline
+trainset_test/best_model/variables/variables.index
+trainset_test/best_model/variables/variables.data-00000-of-00001
+trainset_test/best_model/saved_model.pb
+trainset_test/best_model/keras_metadata.pb
+text_regressor/trial_01/pipeline
+text_regressor/trial_01/checkpoint.index
+text_regressor/trial_01/checkpoint.data-00000-of-00001
+text_regressor/trial_01/checkpoint
+text_regressor/trial_00/pipeline
+text_regressor/trial_00/checkpoint.index
+text_regressor/trial_00/checkpoint.data-00000-of-00001
+text_regressor/trial_00/checkpoint
+text_regressor/graph
